[project]
name = "iut-spectroscopy"
version = "0.1.0"
description = ""
authors = [
    {name = "Ali Niaraeis",email = "ali.niareis@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipython (>=8.31.0,<9.0.0)",
    "polars (>=1.19.0,<2.0.0)",
    "jsonformatter (>=0.3.4,<0.4.0)",
    "toml (>=0.10.2,<0.11.0)",
    "python-telegram-bot (>=21.10,<22.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
